--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Pages#index</h1>
 <p>Find me in app/views/pages/index.html.erb</p>
+
+<%= turbo_frame_tag "pages_hello", src: pages_hello_path do %>
+  <p>Loading...</p>
+<% end %>
+
